--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
 
         </activity>
         <activity android:name=".CustomizedActivity"></activity>
+        <activity android:name=".DetailActivity" />
+
     </application>
 
 </manifest>
