add new Activity for testing fragment usage and add new layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,18 +17,16 @@
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".PokemonListActivity"
-            android:screenOrientation="portrait">
-
-        </activity>
-        <activity android:name=".CustomizedActivity"></activity>
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".CustomizedActivity" />
         <activity android:name=".DetailActivity" />
-
+        <activity android:name=".FragmentTestActivity"></activity>
     </application>
 
 </manifest>
