--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.2.0'
+    compile('com.mikepenz:materialdrawer:5.3.6@aar') {
+        transitive = true
+    }
+    //icons and font
+    compile 'com.mikepenz:google-material-typeface:2.2.0.1@aar'
+    compile 'com.mikepenz:fontawesome-typeface:4.4.0.1@aar'
+    compile 'com.mikepenz:octicons-typeface:3.0.0.1@aar'
 }
